[package]
name = "buffer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pprof = { version = "0.15.0", default-features = false, features = ["flamegraph"] }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
serde_yaml = { version = "0.9.34", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi", "fmt", "registry", "env-filter"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread"] }
tokio-test = { version = "0.4.4", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[dependencies]
bytes = { version = "1.10.1", default-features = false }
crc32fast = { version = "1.5.0", default-features = false, features = ["std"] }
finalize = { path = "../finalize" }
futures = { version = "0.3.31", default-features = false }
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["bytes", "serde"], rev = "fe127b4fe476d3840b1f25a03f44988faf05a570" }
memmap2 = { version = "0.9.8", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
serde = { version = "1.0.227", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
tokio = { version = "1.47.1", default-features = false, features = ["rt", "time"] }
tracing = { version = "0.1.41", default-features = false }
