[package]
name = "buffer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
pprof = { version = "0.15.0", default-features = false, features = ["flamegraph"] }
rand = { version = "0.10.0", default-features = false, features = ["thread_rng"] }
serde_yaml = { git = "https://github.com/f1shl3gs/serde-yaml.git", rev = "62dea63989d8bfd09a9453fa957605dcf09aa4a7", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["ansi", "fmt", "registry", "env-filter"] }
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread"] }
tokio-test = { version = "0.4.5", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }

[dependencies]
bytes = { version = "1.11.1", default-features = false }
crc32fast = { version = "1.5.0", default-features = false, features = ["std"] }
finalize = { path = "../finalize" }
futures = { version = "0.3.31", default-features = false }
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["bytes", "serde"], rev = "29e9225d05de76c6d48134497aa4a94c2cd08380" }
memmap2 = { version = "0.9.10", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["rt", "time"] }
tracing = { version = "0.1.44", default-features = false }
