[package]
name = "buffers"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "sized_records"
harness = false

[dependencies]
async-recursion = { version = "1.0.4" }
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1.69", default-features = false }
bytes = { version = "1.4.0", default-features = false }
crc32fast = { version = "1.3.2", default-features = false, features = ["std"] }
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8.16", default-features = false }
event = { path = "../event" }
finalize = { path = "../finalize" }
fslock = { version = "0.2.0", default-features = false, features = ["std"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
memmap2 = { version = "0.7.1", default-features = false }
metrics = { path = "../metrics" }
num-traits = { version = "0.2.15", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
prost = { version = "0.11.9", default-features = false }
serde = { version = "1.0.164", default-features = false, features = ["derive"] }
measurable = { path = "../measurable" }
thiserror = { version = "1.0.40" }
tokio = { version = "1.29.1", default-features = false, features = ["rt", "macros", "rt-multi-thread", "time", "fs", "io-util"] }
tokio-util = { version = "0.7.8", default-features = false }
tracing = { version = "0.1.38", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["async_tokio"] }
once_cell = "1.18"
proptest = { version = "1.2.0" }
quickcheck = { version = "1.0.3" }
tempfile = { version = "3.6.0" }
tokio-test = { version  = "0.4.2" }
tracing-fluent-assertions = { version = "0.3.0" }
tracing-subscriber = { version = "0.3.17" }