[package]
name = "buffers"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "sized_records"
harness = false

[dependencies]
async-recursion = { version = "1.0.5", default-features = false }
async-stream = { version = "0.3.5" }
async-trait = { version = "0.1.74", default-features = false }
bytes = { version = "1.5.0", default-features = false }
crc32fast = { version = "1.3.2", default-features = false, features = ["std"] }
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8.16", default-features = false }
event = { path = "../event" }
finalize = { path = "../finalize" }
fslock = { version = "0.2.1", default-features = false, features = ["std"] }
futures = { version = "0.3.29", default-features = false, features = ["std"] }
memmap2 = { version = "0.9.0", default-features = false }
metrics = { path = "../metrics" }
num-traits = { version = "0.2.17", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
prost = { version = "0.12.1", default-features = false }
serde = { version = "1.0.190", default-features = false, features = ["derive"] }
measurable = { path = "../measurable" }
thiserror = { version = "1.0.50" }
tokio = { version = "1.33.0", default-features = false, features = ["rt", "macros", "rt-multi-thread", "time", "fs", "io-util"] }
tokio-util = { version = "0.7.10", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["async_tokio"] }
once_cell = "1.18"
proptest = { version = "1.3.1", default-features = false, features = ["std"] }
quickcheck = { version = "1.0.3", default-features = false }
tempfile = { version = "3.8.1" }
tokio-test = { version = "0.4.3" }
tracing-fluent-assertions = { version = "0.3.0" }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["ansi", "fmt", "registry"] }
