[package]
name = "buffers"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "sized_records"
harness = false

[dependencies]
async-stream = { version = "0.3.5", default-features = false }
async-trait = { version = "0.1.81", default-features = false }
bytes = { version = "1.6.0", default-features = false }
crc32fast = { version = "1.4.2", default-features = false, features = ["std"] }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8.20", default-features = false }
event = { path = "../event" }
finalize = { path = "../finalize" }
fslock = { version = "0.2.1", default-features = false, features = ["std"] }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
memmap2 = { version = "0.9.4", default-features = false }
metrics = { path = "../metrics" }
num-traits = { version = "0.2.19", default-features = false }
parking_lot = { version = "0.12.3", default-features = false }
prost = { version = "0.12.6", default-features = false }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
bytesize = { path = "../bytesize" }
thiserror = { version = "1.0.61" }
tokio = { version = "1.38.0", default-features = false, features = ["rt", "macros", "rt-multi-thread", "time", "fs", "io-util"] }
tokio-util = { version = "0.7.11", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["async_tokio"] }
once_cell = { version = "1.19.0", default-features = false }
proptest = { version = "1.5.0", default-features = false, features = ["std"] }
quickcheck = { version = "1.0.3", default-features = false }
testify = { path = "../testify" }
tokio-test = { version = "0.4.4" }
tracing-fluent-assertions = { version = "0.3.0" }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt", "registry"] }
