[package]
name = "codecs"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
syslog = ["syslog_loose"]

[dev-dependencies]
event = { path = "../event", features = ["string_path"] }
futures-util = { version = "0.3.31", default-features = false, features = ["async-await"] }
serde_yaml = { version = "0.9.34", default-features = false }
serde_path_to_error = { version = "0.1.16" }
tokio = { version = "1.41.0", default-features = false, features = ["test-util", "macros"] }

[dependencies]
bytes = { version = "1.8.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
configurable = { path = "../configurable" }
event = { path = "../event" }
futures = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
log_schema = { path = "../log_schema" }
memchr = { version = "2.7.4", default-features = false }
serde_json = { version = "1.0.132", default-features = false, features = ["std"] }
tokio = { version = "1.41.0", default-features = false }
tokio-util = { version = "0.7.12", default-features = false, features = ["codec"] }
tracing = { version = "0.1.40", default-features = false }
serde = { version = "1.0.214", default-features = false }
smallvec = { version = "1.13.2", default-features = false }

# Optional
syslog_loose = { version = "0.21.0", default-features = false, optional = true }
