[package]
name = "codecs"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
syslog = ["dep:syslog_loose"]

[dev-dependencies]
event = { path = "../event", features = ["test"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"]}
serde_yaml = { version = "0.9.34", default-features = false }
tokio = { version = "1.47.0", default-features = false, features = ["test-util", "macros"] }
value = { path = "../value" }

[dependencies]
bytes = { version = "1.10.1", default-features = false }
chrono = { version = "0.4.41", default-features = false }
configurable = { path = "../configurable" }
event = { path = "../event" }
futures = { version = "0.3.31", default-features = false }
log_schema = { path = "../log_schema" }
memchr = { version = "2.7.5", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.142", default-features = false, features = ["std"] }
tokio = { version = "1.47.0", default-features = false }
tokio-util = { version = "0.7.15", default-features = false, features = ["codec"] }
tracing = { version = "0.1.41", default-features = false }
vtl = { path = "../vtl" }

# Optional
syslog_loose = { version = "0.22.0", default-features = false, optional = true }
