[package]
name = "codecs"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
syslog = ["dep:syslog_loose"]

[dev-dependencies]
event = { path = "../event", features = ["test"] }
futures = { version = "0.3.32", default-features = false, features = ["async-await"]}
serde_yaml = { git = "https://github.com/f1shl3gs/serde-yaml.git", rev = "62dea63989d8bfd09a9453fa957605dcf09aa4a7", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["test-util", "macros"] }
value = { path = "../value" }

[dependencies]
bytes = { version = "1.11.1", default-features = false }
chrono = { version = "0.4.43", default-features = false }
configurable = { path = "../configurable" }
event = { path = "../event" }
futures = { version = "0.3.32", default-features = false }
log_schema = { path = "../log_schema" }
memchr = { version = "2.8.0", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
tokio = { version = "1.49.0", default-features = false }
tokio-util = { version = "0.7.18", default-features = false, features = ["codec"] }
tracing = { version = "0.1.44", default-features = false }
vtl = { path = "../vtl" }

# Optional
syslog_loose = { version = "0.23.0", default-features = false, optional = true }
