[package]
name = "condition"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "eval"
harness = false

[dependencies]
event = { path = "../event" }
regex = { version = "1.10.1", default-features = false }
serde = { version = "1.0.189", default-features = false }
value = { path = "../value" }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
