[package]
name = "configurable-derive"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.103", default-features = false }
quote = { version = "1.0.41", default-features = false }
syn = { version = "2.0.108", default-features = false }
