[package]
name = "configurable-derive"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.106", default-features = false }
quote = { version = "1.0.44", default-features = false }
syn = { version = "2.0.117", default-features = false }
