[package]
name = "configurable"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
humanize = { git = "https://github.com/f1shl3gs/humanize", default-features = false, features = ["duration", "serde"], rev = "29e9225d05de76c6d48134497aa4a94c2cd08380" }
serde_yaml = { version = "0.9.34", default-features = false }

[dependencies]
configurable-derive = { path = "../configurable-derive" }
inventory = { version = "0.3.21", default-features = false }
indexmap = { version = "2.12.1", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }

# externals
chrono-tz = { version = "0.10.4", default-features = false }
encoding_rs = { version = "0.8.35", default-features = false }
event = { path = "../event" }
http = { version = "1.4.0", default-features = false, features = ["std"] }
regex = { version = "1.12.2", default-features = false }
url = { version = "2.5.7", default-features = false }
value = { path = "../value" }
