[package]
name = "discovery"
version = "0.1.0"
edition = "2021"
publish = false

[features]
kubernetes = ["kube", "zeroize", "k8s-openapi"]

[dependencies]
futures = { version = "0.3.21" }
k8s-openapi = { version = "0.14.0", default-features = false, optional = true, features = ["api", "v1_16"] }
kube = { version = "0.71.0", default-features = false, optional = true, features = ["client", "rustls-tls", "runtime"] }
tokio = { version = "1.18.0", default-features = false, features = ["macros"] }
zeroize = { version = "1.4.3", optional = true }