[package]
name = "docker"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio = { version = "1.53.0", default-features = false, features = ["macros"]}

[dependencies]
bytes = { version = "1.12.1", default-features = false }
chrono = { version = "0.4.45", default-features = false, features = ["serde"] }
futures = { version = "0.3.33", default-features = false }
http = { version = "1.4.2", default-features = false }
hyper = { version = "1.10.1", default-features = false }
hyper-util = { version = "0.1.20", default-features = false, features = ["client", "http1"] }
http-body-util = { version = "0.1.4", default-features = false }
hyper-unix = { path = "../hyper-unix" }
percent-encoding = { version = "2.3.2", default-features = false }
serde = { version = "1.0.229", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.151", default-features = false, features = ["std"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["codec", "io"] }
