[package]
name = "event"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "tags"
harness = false
path = "benches/tags.rs"

[features]
default = []
test = ["value/string_path"]

[build-dependencies]
prost-build = { version = "0.13.5", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }

[dependencies]
bytes = { version = "1.10.0", default-features = false }
chrono = { version = "0.4.40", default-features = false, features = ["now", "serde"] }
finalize = { path = "../finalize" }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
log_schema = { path = "../log_schema" }
prost = { version = "0.13.5", default-features = false, features = ["std"] }
prost-types = { version = "0.13.5", default-features = false }
rand = { version = "0.9.0" }
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false }
bytesize = { path = "../bytesize" }
value = { path = "../value" }
tracing = { version = "0.1.41", default-features = false }
