[package]
name = "event"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "tags"
harness = false
path = "benches/tags.rs"

[features]
default = []
test = ["value/string_path"]

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false }

[dependencies]
buffer = { path = "../buffer" }
bytes = { version = "1.10.1", default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["now", "serde"] }
finalize = { path = "../finalize" }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
log_schema = { path = "../log_schema" }
rand = { version = "0.9.2" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.142", default-features = false }
bytesize = { path = "../bytesize" }
value = { path = "../value" }
tracing = { version = "0.1.41", default-features = false }
