[package]
name = "event"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "tags"
harness = false
path = "benches/tags.rs"

[features]
default = []
test = ["value/string_path"]

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false }
rand = { version = "0.10.0", default-features = false }

[dependencies]
buffer = { path = "../buffer" }
bytes = { version = "1.11.1", default-features = false }
chrono = { version = "0.4.43", default-features = false, features = ["now", "serde"] }
finalize = { path = "../finalize" }
futures = { version = "0.3.32", default-features = false, features = ["std"] }
log_schema = { path = "../log_schema" }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.149", default-features = false }
tracing = { version = "0.1.44", default-features = false }
typesize = { path = "../typesize" }
value = { path = "../value" }
