[package]
name = "file-source"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
quickcheck = "1.0.3"
tempfile = "3.2.0"
pretty_assertions = "1.0.0"

[dependencies]
bstr = { version = "0.2.17", default-features = false, features = [] }
crc = "2.1.0"
glob = "0.3.0"
scan_fmt = "0.2.6"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing = { version = "0.1", default-features = false, features = [] }
dashmap = { version = "4.0.2", default-features = false, features = [] }
bytes = { version = "1.1.0", default-features = false, features = [] }
serde = { version = "1.0.131", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.72", default-features = false, features = ["std"] }
tokio = { version = "1.14.0", features = ["macros", "rt", "time"] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
indexmap = { version = "1.7.0", default-features = false, features = ["serde"] }