[package]
name = "finalize"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = { version = "0.3.6" }
crossbeam-utils = { version = "0.8.20", default-features = false }
futures = { version = "0.3.31", default-features = false }
bytesize = { path = "../bytesize" }
pin-project-lite = { version = "0.2.15" }
tokio = { version = "1.42.0", default-features = false, features = ["sync", "macros"] }
tracing = { version = "0.1.41", default-features = false }
